# Claude-Code-Monitor

./: Cargo.toml  DESIGN_BRIEF.md  README.md
app/: package.json  pnpm-lock.yaml
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs  watcher.rs
app/src/lib/: format.ts
app/src/lib/components/: ContextBar.svelte  CopyButton.svelte  Icon.svelte  Sparkline.svelte  StatusDot.svelte
app/src/lib/styles/: tokens.css
app/src/routes/: +layout.svelte  +page.svelte
app/src/routes/dashboard/: +page.svelte
src/: api.rs  blocks.rs  cache.rs  cli.rs  joiner.rs  lib.rs  liveness.rs  main.rs  model.rs  parser.rs  pricing.rs  renderer.rs  scanner.rs
