[package]
name = "cc-monitor-app"
version = "0.1.0"
description = "cc-monitor menubar app"
edition = "2021"

[lib]
name = "cc_monitor_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cc-monitor = { path = "../.." }
