[package]
name = "tokenscope-app"
version = "0.1.0"
description = "Tokenscope menubar app"
edition = "2021"

[lib]
name = "tokenscope_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-notification = "2"
notify = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenscope = { path = "../.." }
